--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "aos": "^2.3.4",
     "bootstrap": "^5.0.0-alpha1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.2",
